[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/papertheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Plus/sound/MusicTab.gd" type="Script" id=2]
[ext_resource path="res://scripts/Plus/texture/TextureTab.gd" type="Script" id=3]
[ext_resource path="res://scripts/Plus/GeneralTab.gd" type="Script" id=4]
[ext_resource path="res://scripts/Plus/ControlTab.gd" type="Script" id=5]

[node name="PlusSettings" type="TabContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -259.0
margin_top = -151.0
margin_right = 259.0
margin_bottom = 151.0
theme = ExtResource( 1 )
tab_align = 0

[node name="General" type="Tabs" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 25.0
margin_right = -2.0
margin_bottom = -2.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="General"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="General/VBoxContainer"]
margin_right = 514.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "General Setting
"
align = 1

[node name="ThemeToggle" type="HBoxContainer" parent="General/VBoxContainer"]
margin_top = 37.0
margin_right = 514.0
margin_bottom = 57.0

[node name="Label" type="Label" parent="General/VBoxContainer/ThemeToggle"]
margin_top = 3.0
margin_right = 177.0
margin_bottom = 16.0
text = "Theme Editor Button Visible:  "

[node name="CheckBox" type="CheckBox" parent="General/VBoxContainer/ThemeToggle"]
margin_left = 177.0
margin_right = 197.0
margin_bottom = 20.0

[node name="DeckEditorToggle" type="HBoxContainer" parent="General/VBoxContainer"]
margin_top = 65.0
margin_right = 514.0
margin_bottom = 85.0

[node name="Label" type="Label" parent="General/VBoxContainer/DeckEditorToggle"]
margin_top = 3.0
margin_right = 173.0
margin_bottom = 16.0
text = "Deck Editor Button  Visible:  "

[node name="CheckBox" type="CheckBox" parent="General/VBoxContainer/DeckEditorToggle"]
margin_left = 173.0
margin_right = 193.0
margin_bottom = 20.0

[node name="RuleSetToggle" type="HBoxContainer" parent="General/VBoxContainer"]
margin_top = 93.0
margin_right = 514.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="General/VBoxContainer/RuleSetToggle"]
margin_top = 3.0
margin_right = 142.0
margin_bottom = 16.0
text = "Discord Button Visible:  "

[node name="CheckBox" type="CheckBox" parent="General/VBoxContainer/RuleSetToggle"]
margin_left = 142.0
margin_right = 162.0
margin_bottom = 20.0

[node name="OpenDirToggle" type="HBoxContainer" parent="General/VBoxContainer"]
margin_top = 121.0
margin_right = 514.0
margin_bottom = 141.0

[node name="Label" type="Label" parent="General/VBoxContainer/OpenDirToggle"]
margin_top = 3.0
margin_right = 186.0
margin_bottom = 16.0
text = "Open Directory Button Visible:  "

[node name="CheckBox" type="CheckBox" parent="General/VBoxContainer/OpenDirToggle"]
margin_left = 186.0
margin_right = 206.0
margin_bottom = 20.0

[node name="DiscordToggle" type="HBoxContainer" parent="General/VBoxContainer"]
margin_top = 149.0
margin_right = 514.0
margin_bottom = 169.0

[node name="Label" type="Label" parent="General/VBoxContainer/DiscordToggle"]
margin_top = 3.0
margin_right = 142.0
margin_bottom = 16.0
text = "Discord Button Visible:  "

[node name="CheckBox" type="CheckBox" parent="General/VBoxContainer/DiscordToggle"]
margin_left = 142.0
margin_right = 162.0
margin_bottom = 20.0

[node name="Spacer" type="Control" parent="General/VBoxContainer"]
margin_top = 177.0
margin_right = 514.0
margin_bottom = 250.0
size_flags_vertical = 3

[node name="Button" type="HBoxContainer" parent="General/VBoxContainer"]
margin_top = 258.0
margin_right = 514.0
margin_bottom = 275.0

[node name="Save" type="Button" parent="General/VBoxContainer/Button"]
margin_right = 82.0
margin_bottom = 17.0
text = "Save General"

[node name="Spacer" type="Control" parent="General/VBoxContainer/Button"]
margin_left = 82.0
margin_right = 480.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="Close" type="Button" parent="General/VBoxContainer/Button"]
margin_left = 480.0
margin_right = 514.0
margin_bottom = 17.0
text = "Close"

[node name="Sound" type="Tabs" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 25.0
margin_right = -2.0
margin_bottom = -2.0
script = ExtResource( 2 )

[node name="Rows" type="VBoxContainer" parent="Sound"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Sound/Rows"]
margin_right = 514.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
text = "Sound Settings
"
align = 1
autowrap = true

[node name="BgMusicSelect" type="HBoxContainer" parent="Sound/Rows"]
margin_top = 37.0
margin_right = 514.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="Sound/Rows/BgMusicSelect"]
margin_top = 2.0
margin_right = 111.0
margin_bottom = 15.0
text = "Background Music: "

[node name="Spacer" type="Control" parent="Sound/Rows/BgMusicSelect"]
margin_left = 111.0
margin_right = 290.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="Sound/Rows/BgMusicSelect"]
margin_left = 290.0
margin_right = 470.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="ReloadBtn" type="Button" parent="Sound/Rows/BgMusicSelect"]
margin_left = 470.0
margin_right = 514.0
margin_bottom = 17.0
text = "Reload"

[node name="Volume" type="HBoxContainer" parent="Sound/Rows"]
margin_top = 62.0
margin_right = 514.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="Sound/Rows/Volume"]
margin_top = 1.0
margin_right = 82.0
margin_bottom = 14.0
text = "Music Volume: "

[node name="Spacer" type="Control" parent="Sound/Rows/Volume"]
margin_left = 82.0
margin_right = 298.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="Sound/Rows/Volume"]
margin_left = 298.0
margin_right = 514.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -30.0
max_value = 10.0
value = -10.0

[node name="Mute" type="HBoxContainer" parent="Sound/Rows"]
margin_top = 86.0
margin_right = 514.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="Sound/Rows/Mute"]
margin_top = 3.0
margin_right = 74.0
margin_bottom = 16.0
text = "Mute Music:  "

[node name="CheckBox" type="CheckBox" parent="Sound/Rows/Mute"]
margin_left = 74.0
margin_right = 94.0
margin_bottom = 20.0

[node name="OpenDir" type="HBoxContainer" parent="Sound/Rows"]
margin_top = 114.0
margin_right = 514.0
margin_bottom = 131.0

[node name="Label" type="Label" parent="Sound/Rows/OpenDir"]
margin_top = 2.0
margin_right = 133.0
margin_bottom = 15.0
text = "Open Music Directory:  "

[node name="Button" type="Button" parent="Sound/Rows/OpenDir"]
margin_left = 133.0
margin_right = 165.0
margin_bottom = 17.0
text = "Open"

[node name="Spacer" type="Control" parent="Sound/Rows"]
margin_top = 139.0
margin_right = 514.0
margin_bottom = 250.0
size_flags_vertical = 3

[node name="Button" type="HBoxContainer" parent="Sound/Rows"]
margin_top = 258.0
margin_right = 514.0
margin_bottom = 275.0

[node name="Save" type="Button" parent="Sound/Rows/Button"]
margin_right = 72.0
margin_bottom = 17.0
text = "Save Sound"

[node name="Spacer" type="Control" parent="Sound/Rows/Button"]
margin_left = 72.0
margin_right = 480.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="Close" type="Button" parent="Sound/Rows/Button"]
margin_left = 480.0
margin_right = 514.0
margin_bottom = 17.0
text = "Close"

[node name="Texture" type="Tabs" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 25.0
margin_right = -2.0
margin_bottom = -2.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Texture"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Texture/VBoxContainer"]
margin_right = 514.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
text = "Texture Settings
"
align = 1
autowrap = true

[node name="CustomPortrait" type="HBoxContainer" parent="Texture/VBoxContainer"]
margin_top = 37.0
margin_right = 514.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="Texture/VBoxContainer/CustomPortrait"]
margin_top = 2.0
margin_right = 178.0
margin_bottom = 15.0
text = "Custom Portrait (Client Side): "

[node name="Spacer" type="Control" parent="Texture/VBoxContainer/CustomPortrait"]
margin_left = 178.0
margin_right = 324.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="Texture/VBoxContainer/CustomPortrait"]
margin_left = 324.0
margin_right = 470.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="reload" type="Button" parent="Texture/VBoxContainer/CustomPortrait"]
margin_left = 470.0
margin_right = 514.0
margin_bottom = 17.0
text = "Reload"

[node name="OpenDir" type="HBoxContainer" parent="Texture/VBoxContainer"]
margin_top = 62.0
margin_right = 514.0
margin_bottom = 79.0

[node name="Label" type="Label" parent="Texture/VBoxContainer/OpenDir"]
margin_top = 2.0
margin_right = 150.0
margin_bottom = 15.0
text = "Open Texture Directory:  "

[node name="OpenDir" type="Button" parent="Texture/VBoxContainer/OpenDir"]
margin_left = 150.0
margin_right = 182.0
margin_bottom = 17.0
text = "Open"

[node name="Spacer" type="Control" parent="Texture/VBoxContainer"]
margin_top = 87.0
margin_right = 514.0
margin_bottom = 250.0
size_flags_vertical = 3

[node name="Button" type="HBoxContainer" parent="Texture/VBoxContainer"]
margin_top = 258.0
margin_right = 514.0
margin_bottom = 275.0

[node name="Save" type="Button" parent="Texture/VBoxContainer/Button"]
margin_right = 83.0
margin_bottom = 17.0
text = "Save Texture"

[node name="Spacer" type="Control" parent="Texture/VBoxContainer/Button"]
margin_left = 83.0
margin_right = 480.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="Close" type="Button" parent="Texture/VBoxContainer/Button"]
margin_left = 480.0
margin_right = 514.0
margin_bottom = 17.0
text = "Close"

[node name="Control" type="Tabs" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 25.0
margin_right = -2.0
margin_bottom = -2.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 514.0
margin_bottom = 29.0
text = "Control Setting
"
align = 1

[node name="Spacer" type="Control" parent="Control/VBoxContainer"]
margin_top = 87.0
margin_right = 514.0
margin_bottom = 250.0
size_flags_vertical = 3

[node name="Button" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 258.0
margin_right = 514.0
margin_bottom = 275.0

[node name="Spacer" type="Control" parent="Control/VBoxContainer/Button"]
margin_left = 83.0
margin_right = 480.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="Close" type="Button" parent="Control/VBoxContainer/Button"]
margin_left = 480.0
margin_right = 514.0
margin_bottom = 17.0
text = "Close"

[connection signal="pressed" from="General/VBoxContainer/Button/Save" to="General" method="_on_Save_pressed"]
[connection signal="pressed" from="General/VBoxContainer/Button/Close" to="General" method="_on_Close_pressed"]
[connection signal="pressed" from="Sound/Rows/BgMusicSelect/ReloadBtn" to="Sound" method="_on_ReloadBtn_pressed"]
[connection signal="pressed" from="Sound/Rows/OpenDir/Button" to="Sound" method="_on_Button_pressed"]
[connection signal="pressed" from="Sound/Rows/Button/Save" to="Sound" method="_on_Save_pressed"]
[connection signal="pressed" from="Sound/Rows/Button/Close" to="Sound" method="_on_Close_pressed"]
[connection signal="pressed" from="Texture/VBoxContainer/CustomPortrait/reload" to="Texture" method="_on_reload_pressed"]
[connection signal="pressed" from="Texture/VBoxContainer/OpenDir/OpenDir" to="Texture" method="_on_OpenDir_pressed"]
[connection signal="pressed" from="Texture/VBoxContainer/Button/Save" to="Texture" method="_on_Save_pressed"]
[connection signal="pressed" from="Texture/VBoxContainer/Button/Close" to="Texture" method="_on_Close_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button/Close" to="Control" method="_on_Close_pressed"]
